feat: notes state retainability

--- a/backend/storage/tasksData.json
+++ b/backend/storage/tasksData.json
@@ -4,20 +4,23 @@
     "date": "06-05-2024",
     "description": "Vyluxovat",
     "pending": false,
-    "id": "44337f227d2384ee63d762aa58c2c06f"
+    "id": "44337f227d2384ee63d762aa58c2c06f",
+    "type": "task"
   },
   {
     "title": "Kytky",
     "date": "06-05-2024",
     "description": "Zalét květiny",
     "pending": false,
-    "id": "3c8c4ccc1b40769f09099088ec7d8fb7"
+    "id": "3c8c4ccc1b40769f09099088ec7d8fb7",
+    "type": "task"
   },
   {
     "title": "Pes",
     "date": "06-05-2024",
     "description": "Vyvenčit psa",
     "pending": true,
-    "id": "688c19cd7fd9747a08d679ef1de90929"
+    "id": "688c19cd7fd9747a08d679ef1de90929",
+    "type": "task"
   }
 ]
